...
    <Tab.Navigator
      screenOptions={{
        headerShown: false,
        tabBarStyle: { display: "none" },
      }}
    >
      <Tab.Screen component={ClientHomeScreen} name="ClientHome" options={{ title: "Início" }} />
      <Tab.Screen component={CategoriesScreen} name="Categories" options={{ title: "Categorias" }} />
      <Tab.Screen component={PromotionsScreen} name="Promotions" options={{ title: "Promoções" }} />
      <Tab.Screen component={MyTrainingScreen} name="MyTraining" options={{ title: "Treino" }} />
      <Tab.Screen component={ClientBookingsScreen} name="ClientBookings" options={{ title: "Agenda" }} />
      <Tab.Screen component={FavoritesScreen} name="Favorites" options={{ title: "Favoritos" }} />
      <Tab.Screen component={ClientProfileScreen} name="ClientProfile" options={{ title: "Perfil" }} />
...
