appId: com.personalapp.mobile
name: Auth - Client register success
tags:
  - auth
  - positive
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: screen.auth.login
    timeout: 30000
- tapOn:
    id: button.auth.login.go-register
- extendedWaitUntil:
    visible:
      id: screen.auth.register
    timeout: 15000
- tapOn:
    id: input.auth.register.name
- inputText: Cliente QA
- tapOn:
    id: input.auth.register.email
- inputText: qa.registro@muvify.dev
- tapOn:
    id: input.auth.register.phone
- inputText: "11999998888"
- tapOn:
    id: input.auth.register.password
- inputText: "12345678"
- hideKeyboard
- tapOn:
    id: button.auth.register.submit
- extendedWaitUntil:
    visible:
      id: screen.client.home
    timeout: 45000
- takeScreenshot: auth-client-register-success
